compiler/tests/fail/lower_spill/needs_to_be_spilled_not_spilled.jazz
export fn main () {
  reg u32 x;
  #unspill(x);
}
